# SpecJudge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
data/: models.yaml  rating-rules.yaml
src/specjudge/: __init__.py  about.py  artifacts.py  catalog.py  cli.py  config.py  domain.py  errors.py  rating.py  recommend.py
src/specjudge/judge/: __init__.py  evaluator.py  ollama.py
src/specjudge/render/: __init__.py  html.py  table.py
templates/: matrix.html.j2
tests/: conftest.py
tests/contract/: test_catalog_schema.py  test_cli_contract.py
tests/fixtures/: catalog-test.yaml
tests/fixtures/project-insufficient/.specify/: feature.json
tests/fixtures/project-insufficient/specs/001-feat/: tasks.md
tests/fixtures/project-scarce/specs/001-feat/: tasks.md
tests/fixtures/project-sufficient/.specify/memory/: constitution.md
tests/fixtures/project-sufficient/specs/001-feat/: spec.md  tasks.md
tests/integration/: test_degradation.py  test_html_output.py  test_judge_availability.py  test_judge_selection.py  test_no_external_network.py  test_recommend_flow.py  test_table_output.py
tests/unit/: test_artifacts.py  test_config.py  test_errors.py  test_evaluator.py  test_html.py  test_rating.py  test_recommend.py  test_table.py
