[project]
name = "specjudge"
version = "0.1.1"
description = "Local-first CLI that reads your Spec-Driven Development artifacts and recommends the AI model that best fits the project."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Joaquín Ruiz" }]
keywords = ["spec-driven-development", "llm", "ollama", "cli", "cost", "local-first"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "platformdirs>=4.2",
]

# NOTE: keep [project.urls] and every other table AFTER all bare `key = value`
# entries of [project] — a table header ends the current table, so a key placed
# below one silently lands in the wrong section.
[project.urls]
Homepage = "https://github.com/JoaquinRuiz/SpecJudge"
Repository = "https://github.com/JoaquinRuiz/SpecJudge"
Issues = "https://github.com/JoaquinRuiz/SpecJudge/issues"
Author = "https://jokiruiz.com"

[project.scripts]
specjudge = "specjudge.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specjudge"]

# Empaqueta los ficheros de datos y plantillas junto al paquete para que
# `data/models.yaml`, `data/rating-rules.yaml` y la plantilla HTML viajen con la
# distribución (FR-017 / Principio V).
[tool.hatch.build.targets.wheel.force-include]
"data" = "specjudge/_data"
"templates" = "specjudge/_templates"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: patrón idiomático de Typer (typer.Option/Argument como defaults).
# UP042: los enums heredan de (str, Enum) a propósito, para serialización cómoda.
ignore = ["B008", "UP042"]

[tool.ruff.lint.per-file-ignores]
# Las líneas de datos de test (construcción de objetos) son naturalmente largas.
"tests/**" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
